src/sass/import/header.scss
@import '_variables.scss';

.site-header {
	padding: 1rem 2%;
	box-shadow: 0 0 2.2rem rgb(38, 38, 38);
	background-color: $white;
	@at-root #{$trans-header} & {
		background-color: transparent;
		box-shadow: none;
	}
	.site-branding {
		text-align: center;
		max-width: 25%;
	}
}
body {
	&.hide-header {
		.site-header {
			transition: $smooth-transition;
			transform: translate3d(0, 0, 0);
		}
		&:not(.mouseInHeaderArea) {
			&:not(.header-dropdown-active) {
				&.scrolledPastHeader {
					.site-header {
						transform: translate3d(0, -110%, 0);
					}
				}
			}
		}
	}
	&.fixed-header {
		.site-header {
			position: fixed;
			left: 0;
			width: 100%;
			z-index: 99;
		}
	}
}

.header-top {
	margin-bottom: 1rem;
	> * {
		flex: 1;
	}
}

/*   Search   */
input[type='search'] {
	&#main-search {
		background-color: transparent;
		border: 0 solid rgb(38, 38, 38);
		color: rgb(172, 150, 110);
		@at-root #{$trans-header} & {
			border-color: $white;
			color: $tertiary;
		}
		border-bottom-width: 2px;
		padding: 0.5em 0;
		-webkit-appearance: none;
		border-radius: 0%;
		box-shadow: none;
		&:valid {
			+ .btn-submit {
				transform: translate3d(0, 0, 0);
				opacity: 1;
			}
		}
		+ .btn-submit {
			transition: $smooth-transition;
			font-size: 1.6rem;
			margin-left: 0.5em;
			transform: translate3d(0, 50%, 0);
			opacity: 0;
		}
	}
}
.icon-search {
	font-size: 2rem;
	padding: 0.4em 0.4em 0.4em 0;
	@at-root .site-header & {
		color: $secondary;
		@at-root #{$trans-header} & {
			color: $white;
		}
	}
}
/*   /Search   */

/*   Logo   */
.custom-logo-link {
	display: inline-block;
}
.custom-logo {
	svg {
		> :nth-child(-n + 2) {
			@at-root #{$trans-header} & {
				fill: $white;
			}
		}
	}
}
/*   /Logo   */

/*   Header Info Widget   */
.header-info {
	.textwidget {
		display: flex;
		flex-direction: column;
		text-align: right;
		> :first-child {
			color: rgb(52, 80, 115);
			@at-root #{$trans-header} & {
				color: $white;
			}
			font-size: 1.7267rem;
			padding-right: 0.25em;
		}
		> :last-child {
			font-size: 2.8rem;
			font-weight: 700;
			display: block;
			letter-spacing: 0.1em;
			color: rgb(172, 150, 110);
			@at-root #{$trans-header} & {
				color: $white;
			}
			* {
				font-size: inherit;
			}
		}
	}
}
/*   /Header Info Widget   */

@import './navigation.scss';

